--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,28 @@
 cmake_minimum_required(VERSION 3.9)
 project(SimplexNoise)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
 
-add_executable(SimplexNoise
-        README.md
-        LICENSE
-        examples/RandomWorld.cpp
-        SimplexNoise.cpp
-        SimplexNoise.hpp)
+# Library sources (without the example)
+set(SIMPLEXNOISE_SOURCES
+    SimplexNoise.cpp
+    SimplexNoise.hpp)
 
-set(SFML_DIR ${SFML_PATH})
-find_package(SFML 2.5 COMPONENTS graphics audio)
+# Set path to find SFML 3 installed via Homebrew
+list(APPEND CMAKE_PREFIX_PATH "/opt/homebrew")
 
-target_link_libraries(SimplexNoise sfml-graphics sfml-audio)
+# Try to find SFML
+find_package(SFML 3 COMPONENTS Graphics Audio QUIET)
+
+if(SFML_FOUND)
+    message(STATUS "SFML found - building with example")
+    add_executable(SimplexNoise
+        ${SIMPLEXNOISE_SOURCES}
+        examples/RandomWorld.cpp)
+    target_link_libraries(SimplexNoise SFML::Graphics SFML::Audio)
+else()
+    message(STATUS "SFML not found - building library only (no example)")
+    add_library(SimplexNoise ${SIMPLEXNOISE_SOURCES})
+endif()
